# swaykbdd

./: LICENSE  README.md  meson.build  swaykbdd.1
.github/workflows/: ci.yml
debian/: changelog  control  copyright
src/: cache.cpp  cache.h  layouts.c  layouts.h  lrucache.hpp  main.c  sway.c  sway.h
